--- a/graph.css
+++ b/graph.css
@@ -1,50 +1,79 @@
-html,body{
-    background-color: aqua;
-}
+        img{
+            height: 400px;
+            border-radius: 10%;
+        }
+        blockquote{
+            color: white;
+            background-color: rgba(255,255,255,0.3)
+        }
+        body{
+            background-color: #232741;
+        }
+        .one, .two{
+            display: none;
+            text-align: center;
+            position: relative;
+            top: 20%;
+            font-size: 100px;
+        }
+        
+        h1,h2,h3,h4,h5,h6,p,span{
+            color: white;
+        }
+        .dreamfade{
+            display:none;
+            text-align: center;
+            
+            position: relative;
+            top: 40%;
+            font-size: 100px;
+        }
+        
+        .page2{
+            display: none;
+            position: relative;
+            top: 10%;  
+            background-color: rgba(255,255,255,0.3);
+            border-radius: 3%;
+            padding: 75px;
+            border: 1px solid white;
+        }
+        
+        .page4{
+            padding-top: 100px;
+            background-color: rgba(255,255,255,0.7);
+            border-radius: 3%;
+            padding: 75px;
+            border: 1px solid white;
+            margin-top: 100px;
+            text-align: center;
+        }
+        #particles-js{
+            background-color: #232741;
+            z-index: -1;
+            position: fixed;
+            height:100%;
+            width:100%;
+        }
+        
 
-.title{
-    text-align: center;
-}
+        input{
 
-#test{
-    color: black;
-    background-color: rgba(0,0,0,0.0);
-    
-    -webkit-transition: all 0.5s ease;
--moz-transition: all 0.5s ease;
--ms-transition: all 0.5s ease;
--o-transition: all 0.5s ease;
-transition: all 0.5s ease;
-}
+            background-color: rgba(255,255,255,0.7);
 
-#test:hover{
+            -webkit-transition: all 0.5s ease;
+        -moz-transition: all 0.5s ease;
+        -ms-transition: all 0.5s ease;
+        -o-transition: all 0.5s ease;
+        transition: all 0.5s ease;
+        }
 
-    background-color: rgba(0,0,0,0.5);
-    
-    -webkit-transition: all 0.5s ease;
--moz-transition: all 0.5s ease;
--ms-transition: all 0.5s ease;
--o-transition: all 0.5s ease;
-transition: all 0.5s ease;
-}
+        input:focus{
+            background-color: rgba(255,255,255,0.9);
+        -webkit-transition: all 0.5s ease;
+        -moz-transition: all 0.5s ease;
+        -ms-transition: all 0.5s ease;
+        -o-transition: all 0.5s ease;
+        transition: all 0.5s ease;
 
-#test:input{
-
-    background-color: rgba(0,0,0,0.2);
-    
-    -webkit-transition: all 0.5s ease;
--moz-transition: all 0.5s ease;
--ms-transition: all 0.5s ease;
--o-transition: all 0.5s ease;
-transition: all 0.5s ease;
-}
-
-#test:focus{
-    background-color: rgba(110,110,0,0.5);
--webkit-transition: all 0.5s ease;
--moz-transition: all 0.5s ease;
--ms-transition: all 0.5s ease;
--o-transition: all 0.5s ease;
-transition: all 0.5s ease;
-    
-}
+        }
