--- a/graph.css
+++ b/graph.css
@@ -1,6 +1,7 @@
         .ad{
             height: 400px;
             border-radius: 10%;
+            text-align: left;
         }
         blockquote{
             color: white;
@@ -11,10 +12,9 @@
         }
         .one, .two{
             display: none;
-            text-align: center;
             position: relative;
             top: 20%;
-            font-size: 100px;
+            font-size: 80px;
         }
         
         h1,h2,h3,h4,h5,h6,p,span{
@@ -82,3 +82,5 @@
     height: 110px;
     padding: 10px;
 }
+
+
