--- a/graph.css
+++ b/graph.css
@@ -34,20 +34,30 @@
             position: relative;
             top: 10%;  
             background-color: rgba(255,255,255,0.3);
-            border-radius: 3%;
+            border-radius: 3px;
             padding: 75px;
             border: 1px solid white;
         }
         
-        .page4{
-            padding-top: 100px;
+        .page4id{
+            padding-top: 10px;
             background-color: rgba(255,255,255,0.7);
-            border-radius: 3%;
+            border-radius: 3px;
             padding: 75px;
             border: 1px solid white;
-            margin-top: 100px;
+            margin-top: 10px;
             text-align: center;
         }
+
+#page4menu{
+            position: relative;
+            top: 10%;  
+            background-color: rgba(255,255,255,0.3);
+            border-radius: 3px;
+            padding: 75px;
+            border: 1px solid white;
+}
+
         #particles-js{
             background-color: #232741;
             z-index: -1;
